--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -24,6 +24,11 @@
     <a href="http://twitter.com/{{ site.twitter_user }}/">twitter</a>
   </li>
 {% endif %}
+{% if site.googleplus_user %}
+  <li class="link">
+    <a href="https://plus.google.com/{{ site.googleplus_user }}/">google+</a>
+  </li>
+{% endif %}
 {% if site.github_user and site.github_show_profile_link %}
   <li class="link">
     <a href="http://github.com/{{ site.github_user }}/">github</a>
@@ -33,15 +38,6 @@
     <a href="/atom.xml">rss feed</a>
   </li>
 </ul>
-
-{% if site.simple_search %}
-<form action="{{ site.simple_search }}" method="get">
-  <fieldset role="search">
-    <input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}" />
-    <input class="search" type="text" name="q" results="0" placeholder="Search"/>
-  </fieldset>
-</form>
-{% endif %}
 
 <!-- Octopress Love -->
 <aside id="octopress_linkback">
