Loki and Re:load pages

--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -17,6 +17,12 @@
   </li>
 {% endif %}
   <li class="link">
+    <a href="/loki/">Loki</a>
+  </li>
+  <li class="link">
+    <a href="/reload/">Re:load</a>
+  </li>
+  <li class="link">
     <a href="/about/">about</a>
   </li>
 {% if site.twitter_user %}
