Added Tindie button

--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -43,8 +43,10 @@
   <li class="link rss">
     <a href="/atom.xml">rss feed</a>
   </li>
+  <li>
+  	<a href="https://tindie.com/shops/arachnidlabs/?ref=offsite_badges&utm_source=sellers_arachnidlabs&utm_medium=badges&utm_campaign=badge_medium"><img src="https://s3.amazonaws.com/tindie-static/badges/tindie-medium.png" style="width: 118px; height: 61px" alt="I sell on Tindie"></a>
+  </li>
 </ul>
-
 <!-- Octopress Love -->
 <aside id="octopress_linkback">
   <a href="http://octopress.org/">
