Re:load 2 instructions

--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -20,7 +20,7 @@
     <a href="/loki/">Loki</a>
   </li>
   <li class="link">
-    <a href="/reload/">Re:load</a>
+    <a href="/reload-2/">Re:load</a>
   </li>
   <li class="link">
     <a href="/about/">about</a>
