--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -2,14 +2,21 @@ table {
   border-collapse: collapse;
   margin-bottom: 1em;
 }
+
 table.protocoldesc td, table.protocoldesc th {
   text-align: center;
   min-width: 2em;
 }
+
 td, th {
   border: 1px solid black;
   padding: 2px;
 }
+
 th {
   font-weight: bold;
+}
+
+ul#submenu { 
+    padding-left: 18px;
 }
