--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -38,6 +38,16 @@
         {% endif %}
       </li>
       <li class="link">
+        <a href="/minishift/">Minishift</a>
+        {% if page.url contains "/minishift/" %}
+          <ul class="submenu">
+            <li class="link"><a href="instructions.html">Assembly</a></li>
+            <li class="link"><a href="manual.html">Usage</a></li>
+            <li class="link"><a href="https://www.tindie.com/products/arachnidlabs/minishift/">Buy now</a></li>
+          </ul>
+        {% endif %}
+      </li>
+      <li class="link">
         <a href="/labs-cards/">Trading Cards</a>
         {% if page.url contains "/labs-cards/" %}
           <ul class="submenu">
