Minishift assembly instructions

--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -41,7 +41,7 @@
         <a href="/minishift/">Minishift</a>
         {% if page.url contains "/minishift/" %}
           <ul class="submenu">
-            <li class="link"><a href="instructions.html">Assembly</a></li>
+            <li class="link"><a href="assembly.html">Assembly</a></li>
             <li class="link"><a href="usage.html">Usage</a></li>
             <li class="link"><a href="https://www.tindie.com/products/arachnidlabs/minishift/">Buy now</a></li>
           </ul>
