--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -28,6 +28,14 @@
         {% endif %}
       </li>
       <li class="link">
+        <a href="/reload-pro/">Re:load Pro</a>
+        {% if page.url contains "/reload-pro/" %}
+          <ul class="submenu">
+            <li class="link"><a href="https://www.kickstarter.com/projects/nickjohnson/re-load-pro-a-dc-active-load">Buy now</a></li>
+          </ul>
+        {% endif %}
+      </li>
+      <li class="link">
         <a href="/minimatrix/">Minimatrix</a>
         {% if page.url contains "/minimatrix/" %}
           <ul class="submenu">
