--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -32,6 +32,7 @@
         {% if page.url contains "/reload-pro/" %}
           <ul class="submenu">
             <li class="link"><a href="https://www.kickstarter.com/projects/nickjohnson/re-load-pro-a-dc-active-load">Buy now</a></li>
+            <li class="link"><a href="firmware.html">Firmware Updates</a></li>
           </ul>
         {% endif %}
       </li>
