Added USB protocol docs for the R:LP

--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -33,6 +33,7 @@
           <ul class="submenu">
             <li class="link"><a href="https://www.kickstarter.com/projects/nickjohnson/re-load-pro-a-dc-active-load">Buy now</a></li>
             <li class="link"><a href="firmware.html">Firmware Updates</a></li>
+            <li class="link"><a href="usb-interface.html">USB Interface Specification</a></li>
           </ul>
         {% endif %}
       </li>
