--- a/source/_includes/custom/sidebar.html
+++ b/source/_includes/custom/sidebar.html
@@ -32,7 +32,8 @@
         {% if page.url contains "/reload-pro/" %}
           <ul class="submenu">
             <li class="link"><a href="https://www.kickstarter.com/projects/nickjohnson/re-load-pro-a-dc-active-load">Buy now</a></li>
-            <li class="link"><a href="fan-kit.html">Fan Kit Preorder</a></li>
+            <li class="link"><a href="fan-kit.html">Fan Kit</a></li>
+            <li class="link"><a href="fan-kit-assembly.html">Fan Kit Assembly Instructions</a></li>
             <li class="link"><a href="firmware.html">Firmware Updates</a></li>
             <li class="link"><a href="usb-interface.html">USB Interface Specification</a></li>
           </ul>
