--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,19 +3,15 @@
 <div class="posts">
 	{% for post in paginator.posts %}
 
-	<div onclick="window.location.href='{{ post.url }}'" class="mypost wow clearfix {{ site.animation }}">
+	<div class="mypost wow clearfix {{ site.animation }}">
 	   	<div class="date">
-	   		{{ post.date | date: "<p class='date-top'>%-d</p><p class='bottom-date'>%b %Y</p>" }}
+	   		<a href="{{post.url}}">{{ post.date | date: "<p class='date-top'>%-d</p><p class='bottom-date'>%b %Y</p>" }}</a>
 	   	</div>
 	  	<div class="postcontent">
-	  		<h1>{{post.title}}</h1>
-	    	{% if post.content contains '<!--more-->' %}
-    			{{ post.content | split:'<!--more-->' | first }}
-			{% else %}
-    			{{ post.content }}
-			{% endif %}
+	  		<h1><a href="{{post.url}}">{{post.title}}</a></h1>
+	  		{{post.excerpt}}
 	    	<p class="readmore">
-	      		<a href="{{ post.url }}">Read Post</a>
+	      		<a href="{{ post.url }}#disqus_thread">Comment</a>
 	    	</p>
 	  	</div>
 
@@ -41,5 +37,18 @@
 		</div>
 	</div>
 {% endif %}
+
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'arachnidlabs';
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 
 {% include footer.html %}
