--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="{{ site.description }}">
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 		
-		<title>{{ site.name }}</title>
+		<title>{{ site.title }}</title>
 
 		<link rel="stylesheet" type="text/css" href="/css/style.css">
 		<link rel="stylesheet" type="text/css" href="/css/normalize.css">
