More analytics tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', '{{ site.trackingcode }}']);
 		  _gaq.push(['_setDomainName', '{{ site.ga_domain }}']);
+		  _gaq.push(['_setAllowLinker', true]);
 		  _gaq.push(['_trackPageview']);
 
 		  (function() {
