--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 	  		<h1><a href="{{post.url}}">{{post.title}}</a></h1>
 	  		{{post.excerpt}}
 	    	<p class="readmore">
-	      		<a href="{{ post.url }}#disqus_thread">Comment</a>
+	      		<a href="{{ post.url }}">Comment</a>
 	    	</p>
 	  	</div>
 
@@ -37,18 +37,5 @@
 		</div>
 	</div>
 {% endif %}
-
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'arachnidlabs';
-    
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-</script>
 
 {% include footer.html %}
