--- a/_includes/header.html
+++ b/_includes/header.html
@@ -80,6 +80,7 @@
 					<ul class="clearfix">
 						<li><a href="/index.html">Home</a></li>
 						<li><a href="https://www.tindie.com/stores/arachnidlabs/">Shop</a></li>
+						<li><a href="http://discuss.arachnidlabs.com/">Discuss</a></li>
 						{% for page in site.pages %}
 							{% assign filename = page.url|split:'/'|last %}
 							{% assign length = page.url|split:'/'|size %}
