--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,11 @@
 	  		<h1><a href="{{post.url}}">{{post.title}}</a></h1>
 	  		{{post.excerpt}}
 	    	<p class="readmore">
-	      		<a href="{{ post.url }}">Comment</a>
+	    		{% if post.content contains site.excerpt_separator %}
+	    			<a href="{{ post.url }}">Read more</a>
+	    		{% else %}
+		      		<a href="{{ post.url }}">Comment</a>
+		      	{% endif %}
 	    	</p>
 	  	</div>
 
